--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
 </head>
 <body>
    <div align = "center" class = "main">
+     <img src = "https://cdn.discordapp.com/icons/856977570930491462/a06a5b4a0f0163ee3db46e8de3f9f620.png?size=96" height="200px" width="200px">
        <h1>Suite 9A</h1>
+       <h6>created by -tea#1337</h6>
        <button onclick="getCommunity()">Get community <i class="fas fa-arrow-right"></i></button>
+       <br>
+       <div class = "icons">
+        <a href = ""><i class="fab fa-reddit fa-2x"></i></a> 
+        <a href = ""><i class="fab fa-twitter fa-2x"></i></a>
+       </div>
    </div>
    <footer>
        <div align = "right" class = "footer-container">
