Social media icon update

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
        <button onclick="getCommunity()">Get community <i class="fas fa-arrow-right"></i></button>
        <br>
        <div class = "icons">
-        <a href = ""><i class="fab fa-reddit fa-2x"></i></a> 
-        <a href = ""><i class="fab fa-twitter fa-2x"></i></a>
+        <a href = "https://www.reddit.com/r/suite9a/"><i class="fab fa-reddit fa-2x"></i></a> 
+        <a href = "https://twitter.com/home"><i class="fab fa-twitter fa-2x"></i></a>
        </div>
    </div>
    <footer>
