--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"
       crossorigin="anonymous"
     />
-    <link rel="shortcut icon" href="https://cdn.discordapp.com/icons/856977570930491462/a06a5b4a0f0163ee3db46e8de3f9f620.png?size=96" type="image/x-icon">
+    <link rel="shortcut icon" href="https://cdn.discordapp.com/icons/856977570930491462/701b122726d9c642fce3bfc5753dfc12.png?size=96" type="image/x-icon">
     <script src = "script.js"></script>
 </head>
 <body>
    <div align = "center" class = "main">
-     <img src = "https://cdn.discordapp.com/icons/856977570930491462/a06a5b4a0f0163ee3db46e8de3f9f620.png?size=96" height="200px" width="200px">
+     <img src = "https://cdn.discordapp.com/icons/856977570930491462/701b122726d9c642fce3bfc5753dfc12.png?size=96" height="200px" width="200px">
        <h1>Suite 9A</h1>
-       <h6>created by -tea#1337</h6>
+       <h6>created by <a href ="https://discord.com/channels/@me/861315062094102559">-tea#1337</a></h6>
        <button onclick="getCommunity()">Get community <i class="fas fa-arrow-right"></i></button>
        <br>
        <div class = "icons">
